# ChangeLog for virtual/ffmpeg
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.46 2012/11/26 13:52:54 scarabeus Exp $

  26 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
  Update to global useflag.

  26 Jul 2012; Fabian Groffen <grobian@gentoo.org> ffmpeg-0.10.3.ebuild:
  Marked ~x64-macos

  12 Jul 2012; Fabian Groffen <grobian@gentoo.org> ffmpeg-0.10.3.ebuild:
  Marked ~x86-solaris

  02 Jul 2012; Rick Farina <zerochaos@gentoo.org> ffmpeg-0.10.3.ebuild:
  added speex and gsm use flags per bug #424327

  11 Jun 2012; Benda Xu <heroxbd@gentoo.org> ffmpeg-0.10.3.ebuild:
  keyword ~x86-linux

  06 Jun 2012;  <heroxbd@gentoo.org> ffmpeg-0.10.3.ebuild:
  keyword ~amd64-linux

  03 Jun 2012; Anthony G. Basile <blueness@gentoo.org> ffmpeg-0.10.3.ebuild:
  Keyword ~mips

  18 May 2012; Samuli Suominen <ssuominen@gentoo.org> ffmpeg-0.10.2-r1.ebuild,
  ffmpeg-0.10.3.ebuild:
  Revert libpostproc entirely from the virtual wrt
  http://bugs.gentoo.org/show_bug.cgi?id=416411#c16

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> ffmpeg-0.10.2-r1.ebuild:
  || ( ) block for allowing media-video/ffmpeg, media-libs/libpostproc and
  <=media-video/libav-0.8.2 as providers for getting postproc wrt #416407

  17 May 2012; Alexis Ballier <aballier@gentoo.org> ffmpeg-0.10.3.ebuild:
  ffmpeg provides libpostproc

*ffmpeg-0.10.3 (17 May 2012)

  17 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> +ffmpeg-0.10.3.ebuild:
  Add new virtual that pulls in the postproc library. In packages depend
  directly on the lib, when all deps are sorted this will be removed from here.

  16 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> -ffmpeg-0.6-r1.ebuild,
  -ffmpeg-0.6.90.ebuild, -ffmpeg-0.9.ebuild, ffmpeg-0.10.2-r1.ebuild:
  As ffmpeg is stable drop all old virtuals and match keywords.

  15 May 2012; Alexis Ballier <aballier@gentoo.org> ffmpeg-0.10.2-r1.ebuild:
  keyword ~amd64-fbsd
