@@ -1,6 +1,10 @@
 # ChangeLog for virtual/ffmpeg
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.46 2012/11/26 13:52:54 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ffmpeg/ChangeLog,v 1.47 2012/12/05 13:34:39 scarabeus Exp $
+
+  05 Dec 2012; Tomáš Chvátal <scarabeus@gentoo.org> ffmpeg-0.10.2-r1.ebuild,
+  ffmpeg-0.10.3.ebuild:
+  Raise libav dep and stabilise as it passes repoman.
 
   26 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> metadata.xml:
   Update to global useflag.
